2012-05-07  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm term/pslatex.trm: Fix 'set term cairolatex pdf mono'
	Bug-Debian: http://bugs.debian.org/668339

2012-05-06  Anton Gladky <gladky.anton@gmail.com>

	* src/command.c: Fix segfault in initial check of history when using
	--with-readline=bsd
	Bug-Debian: http://bugs.debian.org/665832

	* src/plot.c: EAM - avoid calling buggy libedit emulation of
	using_history().
	Bug-Debian: http://bugs.debian.org/598547

2012-05-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c term/estimate.trm:  Rename utf8_strlen to utf8_strwidth
	to avoid name collision.

	* src/internal.c (f_strlen f_range) src/util.c (strlen_utf8 gp_strlen)
	(utf8_strchrn gp_strchrn) src/util.h:  Fix gnuplot's user-visible
	string handling routines strlen() and substr() so that they handle
	multibyte UTF-8 characters correctly.  I.e. strlen() returns the number
	of characters, not the number of bytes.  Other multi-byte encodings are
	not handled, however.
	Bug #3480075

2012-05-04  Ethan A Merritt  <merritt@u.washington.edu>

	* CodeStyle config/Makefile.am.in configure.in demo/Makefile.am.in
	 lisp/Makefile.am m4/Makefile.am.in Makefile.am man/Makefile.am
	 share/LaTeX/Makefile.am share/Makefile.am src/Makefile.am
	 src/qtterminal/Makefile.am src/version.c src/wxterminal/Makefile.am
	 term/Makefile.am.in tutorial/Makefile.am.in:

	 Automake 1.12 removes support for the AM_C_PROTOTYPES macro and for
	 conversion of ANSI C code to K&R C code.  Gnuplot's CodeStyle file has
	 warned since version 3.7 that gnuplot would drop support for ansi2knr
	 "very soon".  Now 12+ years later the other shoe has dropped.
	 
	 This set of changes removes reference to AM_C_PROTOTYPES and ansi2knr
	 in the autoconf files, replacing it with an unconditional
	 AC_DEFINE(PROTOTYPES,1) so that the existing source code stays happy.
	 The individual config.* files and the source code itself can be cleaned